fixed some layout issue and implemented the hamburger menu

--- a/styles/main.css
+++ b/styles/main.css
@@ -155,7 +155,6 @@ header{
     display: flex;
 
     justify-content: center;
-    padding: 0 1em;
     position: sticky;
     top: 0;
     z-index: 100;
@@ -166,18 +165,21 @@ header{
     backdrop-filter: blur(5px);
     color: var(--clr-lightText);
     background-color:#110b1ab9;
-    min-width: 812px;
-    /* padding: 0 2em; */
+    min-width: 100%;
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
 
 }
 
 #navList{
     display: flex;
     list-style: none;
-    height: 100%;
+    width: 100%;
     justify-content: center;
     margin: 0 auto;
-    gap: 2em;
+    gap: 4em;
     padding: 0;
     
  
@@ -189,6 +191,7 @@ header{
     font-size: var(--fs-h3);
     text-decoration: none;
     padding: .5em;
+
 }
 
 .navLink:hover{
@@ -198,16 +201,73 @@ header{
     padding: 1em;
 }
 
-@media (max-width:600px){
-    #navList{
-       flex-direction:column;
-    }
-    header{
-        position: static;
-    }
-    #nav{
-        min-width: initial;
-    }
+#check {
+    display: none;
+  }
+
+
+.icons {
+    position: absolute;
+    right: 5%;
+    font-size: 2.2rem;
+    color: #fff;
+    cursor: pointer;
+    display: none;
+    top:1em;
+    z-index: 9999;
+}
+
+
+@media (max-width:768px){
+    .icons {
+        display: inline-flex;
+      }
+      #check:checked~.icons #menu-icon {
+        display: none;
+      }
+      .icons #close-icon {
+        display: none;
+      }
+      #check:checked~.icons #close-icon {
+        display: block;
+      }
+      #nav {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 0;
+        background: rgba(0, 0, 0, .1);
+        backdrop-filter: blur(50px);
+        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+        overflow: hidden;
+        transition: .3s ease;
+      }
+
+      #check:checked~#nav {
+        height: 17.7rem;
+      }
+      #nav a {
+        font-size: 1.1rem;
+        margin: 1.5rem 0;
+        text-align: center;
+        transform: translateY(-50px);
+        opacity: 0;
+        transition: .3s ease;
+      }
+
+      #navList{
+        flex-direction: column;
+        gap: 0;
+      }
+
+      #check:checked~#nav a {
+        transform: translateY(0);
+        opacity: 1;
+        transition-delay: calc(.15s * var(--i));
+      }
+    
+
 }
 
 /* Intro section */
@@ -775,10 +835,11 @@ svg{
     margin: 0;
     padding: 0;
     gap:1rem;
+    align-items: center;
 }
 
 .socialListLink{
-    padding: .5em;
+    padding: .3em;
 }
 
 #topLinks{
@@ -792,7 +853,7 @@ margin-left: 1em;
 
 .footSpace{
     display: flex;
-    gap: 1em;
+    gap: .3em;
 }
 
 #footDate{
@@ -802,8 +863,20 @@ margin-left: 1em;
 .spacer{
     display: flex;
     justify-content: space-between;
-    max-width: 1900px;
+    max-width: 1400px;
     margin: 0 auto;
+    flex-direction: column-reverse;
+    gap: 0;
+    align-items: center;
+}
+
+@media(min-width: 600px){
+    .spacer{
+        flex-direction: row;
+        align-items: inherit;
+        gap: 1em;
+    }
+    
 }
 
 .portfolio-item-individual{
